--- a/src/less/popup.less
+++ b/src/less/popup.less
@@ -1,4 +1,9 @@
-/*@import "base";*/
+/*popup css*/
+
+@zIndex: 999999999;
+@fontSize: 16px;
+@letterSpacing: 1px;
+@lineHeight: 1;
 
 .clear-fix::before, .clear-fix::after {
   display: table;
@@ -9,79 +14,94 @@
   clear: both;
 }
 
+//popup-box内部reset
+.css-reset() {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .popup-box {
+  .css-reset;
+
   position: fixed;
   display: none;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  z-index: 999999999;
   user-select: none;
-
-  //markdown-有更好方法吗？
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  }
+  z-index: @zIndex;
+  font-size: @fontSize;
+  letter-spacing: @letterSpacing;
+  line-height: @lineHeight;
+  -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
   ::-webkit-scrollbar {
     width: 0;
     height: 0;
   }
+
+  .confirm-text, .text, .confirm-button, .button, .icon {
+    .css-reset;
+  }
 }
 
 .popup-mask {
+  .css-reset;
+
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: fade(#434343, 50%);
 }
 
-.popup-confirm {
+.popup-item {
+  .css-reset;
+
   position: absolute;
   display: none;
-  width: 250px;
-  height: 165px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  margin: auto;
   border-radius: 10px;
-  background-color: #ffffff;
   text-align: center;
   overflow: hidden;
+}
+
+.popup-confirm {
+  width: 250px;
+  height: 160px;
+  background-color: #ffffff;
+  box-shadow: 2px 2px 8px -2px fade(#555, 50%);
 
   .confirm-text {
     width: 100%;
     height: 70%;
-    margin: 0;
-    padding: 10% 12.8% 5%;
-    font-size: 16px;
+    padding: 25px 32px 12px;
     line-height: 1.625;
     color: #222222;
+  }
 
-    .text {
-      display: flex;
-      width: 100%;
-      height: 100%;
-      align-items: center;
-      justify-content: center;
-      overflow-y: auto;
-      -webkit-overflow-scrolling: touch;
-    }
+  .text {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
   }
 
   .confirm-button {
     width: 100%;
     height: 30%;
     border-top: 1px solid #eee;
+    background-color: #eee;
   }
 
   .button {
-    width: 50%;
+    width: 49.8%;
     height: 100%;
     border: 0;
     outline: 0;
@@ -93,7 +113,7 @@
   }
 
   .yes {
-    float: right;
+    float: left;
     color: #377bd7;
 
     &:active {
@@ -103,9 +123,8 @@
   }
 
   .no {
-    float: left;
+    float: right;
     color: #666;
-    border-right: 1px solid #eee;
 
     &:active {
       background-color: #666;
@@ -115,38 +134,40 @@
 }
 
 .popup-success {
-  &:extend(.popup-confirm);
-  display: block;
   width: 188px;
   height: 112px;
+  max-height: 112px;
+  padding: 25px 26px 24px;
   background-color: fade(#555, 90%);
-  padding: 25px 15px 0;
+  box-shadow: 2px 2px 8px -2px fade(#555, 50%);
 
   .icon {
     display: inline-block;
     width: 32px;
     height: 32px;
     font-size: 0;
-    background: transparent url(../img/unbind-success.png) center/ cover no-repeat;
+    background: transparent center/ cover no-repeat;
   }
 
   .text {
+    width: 100%;
     margin-top: 15px;
-    padding: 0;
-    font-size: 16px;
-    letter-spacing: 1px;
-    line-height: 1;
     color: #fff;
     white-space: nowrap;
-    text-align: center;
     overflow: hidden;
   }
 }
 
+/* extend在这里有一点问题 */
+.popup-success .icon {
+  background-image: url(../img/unbind-success.png);
+}
+
 .popup-failure {
-  display: none;
-  width: 212px;
   &:extend(.popup-success all);
+
+  width: 212px;
+  padding: 25px 15px 24px;
 
   .icon {
     background-image: url(../img/unbind-failure.png);
@@ -154,11 +175,13 @@
 }
 
 .popup-loading {
-  display: none;
   &:extend(.popup-success all);
 
-  .icon.loading {
+  .icon {
     background-image: url(../img/unbind-loading.png);
+  }
+
+  .loading {
     will-change: transform;
     animation: popup-loading 2s linear infinite;
 
